# fastapi-kafka-postgres-weather

./: Dockerfile  README.md  docker-compose.yml  init.sql  noaa_api_tester.py  pyproject.toml  weather_consumer.py  weather_producer.py  web_app.py
.github/workflows/: docker-image.yml
